<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/text">

        </ImageView>

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:text="@string/emai"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:textSize="16px"
            android:fontFamily="sans-serif-condensed"
            android:textFontWeight="400"
            android:backgroundTint="@color/bluebutcolor"
            android:layout_gravity="center"
            android:id="@+id/email"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:hint="@string/mailexample"
            >

        </EditText>

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_gravity="center"
            android:layout_marginRight="45dp"
            android:text="@string/passs"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:textFontWeight="400"
            android:password="true"
            android:backgroundTint="@color/bluebutcolor"
            android:layout_gravity="center"
            android:id="@+id/password"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:hint="@string/youpass"
            android:textSize="16px"
            android:fontFamily="sans-serif-condensed"
            >

        </EditText>

        <Button
            android:fontFamily="sans-serif-condensed"
            android:onClick="Enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bluebutcolor"
            android:text="@string/log"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false">

        </Button>

    </LinearLayout>

</ScrollView>