<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ResultActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/nwstri"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/bluebutcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        </TextView>



        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/img_wither"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:src="@drawable/uil_play"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif"
                android:fontWeight="700"
                android:text="@string/witcher"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <ImageView

                android:src="@drawable/img_jess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:src="@drawable/uil_play"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:text="@string/jessica_jones"
                android:fontFamily="sans-serif"
                android:fontWeight="700"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <ImageView

                android:src="@drawable/img_third"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:src="@drawable/uil_play"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="sans-serif"
                android:fontWeight="700"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:text="@string/magicians"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
